Add FIX operation & skipLowValidation-feature (#310)
* Fix sanitize cataloger (#306)

* Dependency update (#308)

* Bump the production-dependencies group across 1 directory with 2 updates (#305)
Bumps the production-dependencies group with 2 updates in the / directory: [@natlibfi/melinda-rest-api-commons](https://github.com/natlibfi/melinda-rest-api-commons) and [express](https://github.com/expressjs/express).

* Add fix operation (#297)
Add prio endpoint /fix/:id to run fix operation (available default fixTypes: UNDEL and DELET) for a record in the datastore

* Dependency update (#293)

* Bump the development-dependencies group with 2 updates (#292)
Bumps the development-dependencies group with 2 updates: [@babel/plugin-transform-runtime](https://github.com/babel/babel/tree/HEAD/packages/babel-plugin-transform-runtime) and [@babel/preset-env](https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env).


* Bump the production-dependencies group with 2 updates (#291)
Bumps the production-dependencies group with 2 updates: [@babel/runtime](https://github.com/babel/babel/tree/HEAD/packages/babel-runtime) and [@natlibfi/melinda-commons](https://github.com/natlibfi/melinda-commons-js).

* Update deps

* Bump @babel/cli in the development-dependencies group (#299)
Bumps the development-dependencies group with 1 update: [@babel/cli](https://github.com/babel/babel/tree/HEAD/packages/babel-cli).

* Bump @babel/runtime in the production-dependencies group (#298)
Bumps the production-dependencies group with 1 update: [@babel/runtime](https://github.com/babel/babel/tree/HEAD/packages/babel-runtime).

* Fix sanitize cataloger (#306) (#307)

* Fix sanitize cataloger (#306)
Prio: Do not error when cataloger parameter is used without special KVP priviledges if id in cataloger parameter matches id used for logging in

* Dependency update (#308)
* Bump the production-dependencies group across 1 directory with 2 updates (#305)
Bumps the prod
